# opal-fetcher-mongo

./: Dockerfile  Makefile  pyproject.toml  setup.py
src/opal_fetcher_mongo/: provider.py
src/opal_fetcher_mongo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
