[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=7.1", "motor==3.3.2"]
build-backend = "setuptools.build_meta"

[project]
name = 'opal-fetcher-mongo'
authors = [
    { name="Tim Chen", email="guanting.gt0127@gmail.com" },
]
description="An OPAL fetch provider to bring data from Mongo DB."
readme = "README.md"
keywords = [ "Open Policy Agent", "OPA", "OPAL", "Open Policy Administration Layer", "Mongo", "Permit.io" ]
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
classifiers = [
    'Operating System :: OS Independent',
    'License :: OSI Approved :: Apache Software License',
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
dependencies = [
    'opal-common>=0.1.11',
    'asyncpg',
    "pydantic",
    'tenacity',
    'click',
]
dynamic = ["version"]
